--- a/profile.html
+++ b/profile.html
@@ -5,78 +5,38 @@
   <title>Your Profile – Khotwa</title>
   <link rel="stylesheet" href="styles.css"/>
   <style>
-    .profile-container {
-      max-width: 500px;
-      margin: 3rem auto;
-      padding: 2rem;
-      background: var(--card-bg);
-      border-radius: 10px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
-    }
-    .profile-container h2 { text-align: center; margin-bottom: 1.5rem; }
-    .profile-info p {
-      font-size: 1.1rem;
-      margin-bottom: 1rem;
-      color: var(--text);
-    }
-    .logout-btn {
-      display: block;
-      margin: 2rem auto 0;
-      padding: 0.8rem 2rem;
-      border: none;
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .logout-btn:hover {
-      background: var(--green);
-    }
+    .profile-container { max-width:500px; margin:3rem auto; padding:2rem;
+      background:var(--card-bg); border-radius:10px; box-shadow:0 2px 12px rgba(0,0,0,0.1); }
+    .logout-btn { background: var(--btn-bg); padding:0.7rem 1.5rem; border:none; 
+      border-radius:5px; color:var(--btn-text); font-weight:bold; cursor:pointer; }
   </style>
 </head>
 <body>
 <script>
-  if (
-    localStorage.getItem("isLogged") !== "true" &&
-    localStorage.getItem("rememberMe") !== "true"
-  ) {
-    alert("You must log in first!");
-    location.href = "login.html";
+  if (localStorage.getItem('isLogged')!=='true' && localStorage.getItem('rememberMe')!=='true') {
+    alert('Login required'); location.href = 'login.html';
   }
 </script>
 
-<header class="navbar">
-  <div class="logo">KHOTWA</div>
-  <nav class="nav-container">
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="admin.html">Admin</a></li>
-    </ul>
-    <ul class="nav-links" id="authLinks"></ul>
-    <button id="darkToggle" class="dark-btn">🌓</button>
-  </nav>
-</header>
+<header class="navbar">…</header>
 
-<section class="profile-container">
+<section class="profile-container" data-aos="fade-up">
   <h2>Welcome Back 👋</h2>
-  <div class="profile-info">
-    <p><strong>Name:</strong> <span id="name">Administrator</span></p>
-    <p><strong>Email:</strong> <span id="email">admin@khotwa.com</span></p>
-    <p><strong>Role:</strong> Admin</p>
-  </div>
+  <p><strong>Name:</strong> Administrator</p>
+  <p><strong>Email:</strong> admin@khotwa.com</p>
+  <p><strong>Role:</strong> Admin</p>
   <button id="logoutBtn" class="logout-btn">Logout</button>
 </section>
 
 <footer class="footer"><p>© 2025 Khotwa Student Council</p></footer>
 <script src="main.js"></script>
 <script>
-  document.getElementById("logoutBtn").addEventListener("click", function () {
+  document.getElementById("logoutBtn").onclick = e => {
     localStorage.removeItem("isLogged");
     localStorage.removeItem("rememberMe");
-    alert("✅ تم تسجيل الخروج بنجاح");
-    location.href = "login.html";
-  });
+    alert("✅ Logged out");
+    location.href = 'login.html';
+  }
 </script>
 </body>
 </html>
