--- a/contact.html
+++ b/contact.html
@@ -1,153 +1,53 @@
 <!DOCTYPE html>
 <html lang="en" data-theme="light">
 <head>
-  <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta charset="UTF‑8"/><meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Contact – Khotwa</title>
   <link rel="stylesheet" href="styles.css"/>
   <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet"/>
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet"/>
   <style>
-    .contact-section {
-      max-width: 900px;
-      margin: 2rem auto;
-      padding: 1rem;
-      display: grid;
-      grid-template-columns: 1fr;
-      gap: 2rem;
-    }
-    @media(min-width: 768px) {
-      .contact-section {
-        grid-template-columns: 1fr 1fr;
-        align-items: center;
-      }
-    }
-    .info {
-      padding: 1rem;
-      background-color: var(--card-bg);
-      border-radius: 10px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.05);
-    }
-    .contact-form {
-      background: var(--card-bg);
-      padding: 2rem;
-      border-radius: 10px;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.1);
-    }
-    .contact-form .form-group {
-      position: relative;
-      margin-bottom: 1.2rem;
-    }
-    .contact-form input,
-    .contact-form textarea {
-      width: 100%;
-      padding: 0.85rem 1rem 0.85rem 2.8rem;
-      font-size: 1rem;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      background: var(--bg);
-      color: var(--text);
-    }
-    .contact-form .material-symbols-outlined {
-      position: absolute;
-      left: 10px;
-      top: 50%;
-      transform: translateY(-50%);
-      color: #888;
-      font-size: 1.3rem;
-    }
-    .contact-form button {
-      width: 100%;
-      padding: 0.9rem;
-      background: var(--btn-bg);
-      color: var(--btn-text);
-      border: none;
-      border-radius: 6px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-    .contact-form button:hover {
-      background: var(--green);
-    }
-    .toast {
-      position: fixed;
-      top: 1rem;
-      right: 1rem;
-      background: var(--green);
-      color: var(--white);
-      padding: 0.8rem 1.4rem;
-      border-radius: 5px;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-      opacity: 0;
-      pointer-events: none;
-      transition: opacity 0.4s ease;
-      z-index: 999;
-    }
-    .toast.show {
-      opacity: 1;
-      pointer-events: auto;
-    }
+    .toast { position: fixed; top:1rem; right:1rem; background:var(--green); color:#fff;
+      padding:.8rem 1.4rem; border-radius:5px; opacity:0; pointer-events:none;
+      transition: opacity .4s; z-index:999; }
+    .toast.show { opacity:1; pointer-events:auto; }
   </style>
 </head>
 <body>
-
 <header class="navbar" data-aos="fade-down">
   <div class="logo">KHOTWA COUNCIL</div>
   <nav class="nav-container">
-    <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="calendar.html">Calendar</a></li>
-      <li><a href="register.html">Register</a></li>
-      <li><a href="admin.html">Admin</a></li>
-      <li><a href="contact.html" class="active">Contact</a></li>
-      <li><a href="profile.html">Profile</a></li>
-    </ul>
+    <ul class="nav-links">…</ul>
+    <ul class="nav-links" id="authLinks"></ul>
     <button id="darkToggle" class="dark-btn">🌓</button>
   </nav>
 </header>
 
 <section class="section contact-section" data-aos="fade-up">
-  <div class="info">
-    <h2>Contact Information</h2>
-    <p><strong>Email:</strong> support@khotwa.edu</p>
-    <p><strong>Phone:</strong> +966 555 123 456</p>
-    <p><strong>Location:</strong> University Campus, Bldg. B</p>
-  </div>
   <div class="contact-form">
     <h2>Send a Message</h2>
     <form id="contactForm">
-      <div class="form-group">
-        <span class="material-symbols-outlined">person</span>
-        <input type="text" name="name" placeholder="Your Name" required/>
-      </div>
-      <div class="form-group">
-        <span class="material-symbols-outlined">mail</span>
-        <input type="email" name="email" placeholder="Email Address" required/>
-      </div>
-      <div class="form-group">
-        <span class="material-symbols-outlined">message</span>
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-      </div>
+      <div class="form-group"><span class="material-symbols-outlined">person</span>
+        <input name="name" type="text" placeholder="Your Name" required /></div>
+      <div class="form-group"><span class="material-symbols-outlined">mail</span>
+        <input name="email" type="email" placeholder="Email Address" required /></div>
+      <div class="form-group"><span class="material-symbols-outlined">message</span>
+        <textarea name="message" rows="5" placeholder="Your Message" required></textarea></div>
       <button type="submit">Send Message</button>
     </form>
+    <div id="toastContact" class="toast">✅ Message sent successfully!</div>
   </div>
 </section>
 
-<div id="toast" class="toast">✅ Message sent successfully!</div>
-
-<footer class="footer" data-aos="fade-up">
-  <p>© 2025 Khotwa Student Council</p>
-</footer>
+<footer class="footer"><p>© 2025 Khotwa Student Council</p></footer>
 
 <script src="main.js"></script>
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>
-  AOS.init({ duration: 700, once: true });
-
+  AOS.init({ duration:700, once:true });
   const form = document.getElementById('contactForm');
-  const toast = document.getElementById('toast');
-  form.addEventListener('submit', function(e){
+  const toast = document.getElementById('toastContact');
+  form.addEventListener('submit', e => {
     e.preventDefault();
     const data = {
       name: form.name.value.trim(),
@@ -160,7 +60,7 @@
     localStorage.setItem('contacts', JSON.stringify(arr));
     form.reset();
     toast.classList.add('show');
-    setTimeout(()=> toast.classList.remove('show'), 3000);
+    setTimeout(() => toast.classList.remove('show'), 3000);
   });
 </script>
 </body>
